--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
-    "jest": "^25.4.0",
-    "lite-server": "^2.5.4"
+    "jest": "^25.4.0"
   },
   "dependencies": {
     "babel-plugin-import": "^1.13.0"
